[gd_scene load_steps=4 format=3 uid="uid://cdyibxi6n0nlq"]

[ext_resource type="Script" path="res://Scripts/boss_proj.gd" id="1_fer7k"]
[ext_resource type="Texture2D" uid="uid://bolmdgxn8455i" path="res://Assets/Enemies/Enemy_card_proj.png" id="2_0e47k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r1vlh"]
size = Vector2(47.5, 47.5)

[node name="boss_proj" type="Area2D"]
scale = Vector2(0.8, 0.8)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_fer7k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 2.38419e-06)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_r1vlh")

[node name="EnemyCardProj" type="Sprite2D" parent="."]
position = Vector2(5, -3.33786e-06)
scale = Vector2(0.0463867, 0.0463867)
texture = ExtResource("2_0e47k")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
